# samovar

./: .gitignore  CONTRIBUTIONS  LICENCE.en  LICENCE.ru  README.md  build.conf  build.run  configure.scan
.kotomka/docker/: Dockerfile
.kotomka/scripts/: clean.app  copy.app  emate  kotomka.app  library  make.run  package.app  testsrun.app
code/: CMakeLists.txt  Makefile  postinst
code/exclude/: firewall.cpp  firewall.hpp  server.cpp  server.hpp  setup.cpp  setup.hpp
code/files/opt/etc/init.d/: S96samovar
code/files/opt/etc/nginx/conf.d/: nginx.conf.set  wui.conf
code/files/opt/var/www/: TODO  Thumbs.db  index.html  index_new.html  index_new_main_card.html  test.html
code/files/opt/var/www/assets/images/logo/: самовар-лого.afdesign
code/files/opt/var/www/assets/js/bootstrap/: bootstrap.bundle.min.js.map
code/files/opt/var/www/code/css/: bootstrap.min.css  bootstrap_limitless.css  bootstrap_limitless.min.css  components.css  components.min.css  custom.css  layout.css  layout.min.css
code/files/opt/var/www/code/js/builders/kvas/: reports.js  services.js  witelist.js
code/files/opt/var/www/code/js/builders/samovar/: core.js  library.js
code/files/opt/var/www/code/js/libraries/core/: apps.manager.js  classes.js  extensions.js  functions.js  init.js  router.js
code/files/opt/var/www/code/js/libraries/locals/: draggable.js
code/files/opt/var/www/code/js/pages/all/: 1Loader.js  _mainbuilder.js  _page_builder.js  apps.js  apps_classes.js  configurator.js  errors.js  feedback.js  form_validation_library.js  form_validation_styles.js  index_builder.js  loader.js  page_builder.js  ratings.js  scrolling.js  select2.js  server_loader.js  validator.js
code/files/opt/var/www/code/js/pages/archive/: server_loader.js  transport.js
code/files/opt/var/www/code/js/pages/classes/: ratings.js  reviews.js  router.js  scrolling.js  transport.js  validator.js
code/files/opt/var/www/code/js/pages/extensions/: loader.js
code/files/opt/var/www/code/js/pages/index/: actions.js  loader.js  ratings.js
code/files/opt/var/www/code/js/pages/list/: data_tables.js
code/files/opt/var/www/code/js/pages/reports/: builder.js
code/files/opt/var/www/code/js/pages/services/: accordion.js  builder.js
code/files/opt/var/www/code/js/pages/wlist/: builder.js  data_tables.js  guest_nets.js
code/files/opt/var/www/code/js/vendors/: form_validation_library.js  form_validation_styles.js  select2.js
code/files/opt/var/www/extensions/css/: bootstrap.css  components.css  custom.css
code/files/opt/var/www/extensions/js/pages/all/: apps.js  configurator.js  errors.js  scrolling.js
code/files/opt/var/www/extensions/js/pages/index/: actions.js
code/files/opt/var/www/extensions/js/pages/services/: accordion.js
code/files/opt/var/www/extensions/js/pages/wlist/: data_tables.js  guest_nets.js
code/files/opt/var/www/extensions/js/vendors/: draggable.js  select2.js
code/files/opt/var/www/html-elements/: card-media.html  media_list.html  menu-btn  table-row  tabs_borderless.html  timeline.html
code/files/opt/var/www/html/apps/kvas/: debug.html  services.html  white_list.html
code/files/opt/var/www/html/apps/kvas/reports/: reports.html
code/files/opt/var/www/html/apps/kvas/reports/modules/: header.html
code/files/opt/var/www/html/apps/kvas/services/: services.html
code/files/opt/var/www/html/apps/kvas/services/modules/: breadcrumb.html  header.html
code/files/opt/var/www/html/apps/kvas/wlist/: wlist.html
code/files/opt/var/www/html/apps/samovar/core/: breadcrumb.html
code/files/opt/var/www/html/core/parts/: right_toolbar.html  sidebar.html
code/files/opt/var/www/html/core/templates/: history.html
code/files/opt/var/www/html/errors/: error_403.html  error_404.html  error_405.html
code/files/opt/var/www/html/tests/: test.html
code/files/opt/var/www/pages/all/elements/: right_panel.html  sidebar.html
code/files/opt/var/www/pages/all/modals/: full_del.html  simple_del.html
code/files/opt/var/www/pages/all/modules/: right_call_button.html  right_panel.html  sidebar.html
code/files/opt/var/www/pages/core/parts/: right_panel.html  right_toolbar.html
code/files/opt/var/www/pages/core/templates/: app.delete.html  card.html  history.html  preview.html
code/files/opt/var/www/pages/errors/: error_403.html  error_404.html  error_405.html  error_500.html  error_503.html
code/files/opt/var/www/pages/extensions/modals/: history.html  preview.html
code/files/opt/var/www/pages/general/elements/: setup_button.html
code/files/opt/var/www/pages/kvas/: debug.html  services.html  white_list.html
code/files/opt/var/www/pages/kvas/arhive/: services-old.html
code/files/opt/var/www/pages/kvas/debugs/: debug.html
code/files/opt/var/www/pages/kvas/lists/: white_list.html
code/files/opt/var/www/pages/kvas/reports/: reports.html
code/files/opt/var/www/pages/kvas/reports/modules/: breadcrumb.html  card.html  header.html
code/files/opt/var/www/pages/kvas/services/: services.html
code/files/opt/var/www/pages/kvas/services/modules/: breadcrumb.html  card.html  header.html  ssr_setup.html
code/files/opt/var/www/pages/kvas/wlist/: wlist.html
code/files/opt/var/www/pages/kvas/wlist/modules/: breadcrumb.html  card.html  header.html
code/files/opt/var/www/pages/tests/: animation.html
code/src/: CMakeLists.txt  Makefile  api.cpp  locale.cpp  samovar.cpp  server.cpp
code/src/includes/: api.hpp  codes.hpp  locale.hpp  samovar.hpp  system.hpp
code/src/locale/en_US/: samovar.po
code/src/locale/en_US/LC_MESSAGES/: samovar.mo  samovar.pot
code/tests/: CMakeLists.txt  TestLocale.cpp  TestMain.cpp  TestSystem.cpp  Tests.hpp
server/apps/: config.ini  init.base.sh  test.json5
server/kvas/: README  api.py  config.py  gunicorn.service  nginx.conf  requirements.txt
server/ratings/: README  api.py  config.py  nginx.conf  uwsgi.ini  uwsgi.service
server/samovar/: README  api.py  config.py  gunicorn.service  nginx.conf  requirements.txt  samovar.logrotate  uwsgi.ini
server/tests/: README  http-client.private.env.json  kvas.http  requests.http  samovar.http  sockets.html  (+1 more)
(+71 files in other folders)
